<resources>
    <string name="app_name">AppChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="tv_name">Name</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="welcome_to_quick_chat">Welcome to Quick Chat</string>
    <string name="login">login</string>
    <string name="create_account">create account</string>
    <string name="login_or_create_an_account_to_get_started">Login or create an account to get started</string>
    <string name="icon">Icon</string>
    <string name="display_name">DisplayName</string>
    <string name="status">Status</string>
    <string name="notifications_title">Notifications</string>
    <string name="title_settings">title setting</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="decline_friend_request">decline friend request</string>
    <string name="request_sent">request sent</string>
    <string name="remove_friend">remove friend</string>
    <string name="add_friend">add friend</string>
    <string name="accept_friend_request">accept friend resquest</string>

    <string name="title_chats">Chats</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_users">Users</string>

    <string name="title_profile">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="user_image">User image</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
    <string name="create_a_new_account">Create a new account</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="login_to_your_account">Login to your account</string>

    <string name="change_image">Change Image</string>
    <string name="logout">Logout</string>
    <string name="change_status">Change Status</string>

    <string name="chat_icon">Chat icon</string>
    <string name="notification">Notification</string>
</resources>