<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewmodel"
            type="com.example.appchat.ui.start.StartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.start.StartFragment">

        <TextView
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_to_quick_chat"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/login"
            android:onClick="@{() ->viewmodel.goToLoginPressed()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline50" />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{()->viewmodel.goToCreateAccountPressed()}"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha=".8"
            android:gravity="center"
            android:text="@string/login_or_create_an_account_to_get_started"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_create_account" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>