<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.appchat.ui.start.createAccount.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            tools:context=".ui.start.login.LoginFragment">

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">



                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:textAllCaps="false"
                    app:cardCornerRadius="10dp"
                    app:strokeColor="#ECE4E4"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="5dp"
                            android:src="@drawable/google" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:text="@string/sign_up_with_google"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

            <View
                android:id="@+id/line1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="#E6E0E0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear1" />

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/tv_name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPersonName"
                        android:text="@={viewmodel.displayName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="Email"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:ems="10"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:text="@={viewmodel.emailText}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="Password"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPassword"
                        android:text="@={viewmodel.passwordText}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <include
                android:id="@+id/passwordStrengthDashboard"
                layout="@layout/layout_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/linear2" />


            <CheckBox
                android:id="@+id/cb_remember"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_remember"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_remember" />

            <TextView
                android:id="@+id/tv_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="I agree with Terms and Privacy"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/cb_remember"
                app:layout_constraintTop_toBottomOf="@id/passwordStrengthDashboard" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:alpha="0.7"
                android:enabled="@{!viewmodel.isCreatingAccount()}"
                android:onClick="@{()->viewmodel.createAccountPressed()}"
                android:backgroundTint="@color/purple_500"
                android:text="@string/btn_sign_up"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_remember" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:alpha="0.5"
                android:gravity="center_horizontal"
                android:text="Forgot Password?"
                android:textColor="#0F2DE8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <View
                android:id="@+id/line2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="#E6E0E0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/line2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:gravity="center_horizontal"
                    android:text="Already have an account?"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:alpha="0.7"
                    android:onClickListener="@{() -> viewmodel.goToLoginAccountPressed()}"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center_horizontal"
                    android:text="Log in"
                    android:layout_marginBottom="25dp"
                    android:textColor="@color/purple_500" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>